--- a/src/MyBlog/project.json
+++ b/src/MyBlog/project.json
@@ -10,7 +10,8 @@
     "Microsoft.AspNet.Mvc.TagHelpers": "6.0.0-rc1-final",
     "Microsoft.AspNet.Mvc": "6.0.0-rc1-final",
     "EntityFramework.Commands": "7.0.0-rc1-final",
-    "EntityFramework.MicrosoftSqlServer.Design": "7.0.0-rc1-final"
+    "EntityFramework.MicrosoftSqlServer.Design": "7.0.0-rc1-final",
+    "Microsoft.AspNet.StaticFiles": "1.0.0-rc1-final"
   },
 
   "commands": {
